<?xml version="1.0"?>
<package format="2">
  <name>rbvogui_wheels_calibration</name>
  <version>0.1.0</version>
  <description>The rbvogui_wheels_calibration package, based on RComponent structure. Node created to calibrate the wheels and write the mean values in the corresponding .env file.</description>

  <maintainer email="jamendez@robotnik.es">Jose Antonio Mendez Ibarra</maintainer>

  <author email="jamendez@robotnik.es">Jose Antonio Mendez Ibarra</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>robontik_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>robotnik_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
